Adicionando Footer as páginas e finalizando Parte 2 do curso

--- a/products.html
+++ b/products.html
@@ -40,5 +40,17 @@
                 </li>
             </ul>
         </main>
+        <footer>
+            <div class="footer-wrapper">
+                    <h2>Scissors</h2>
+                    <p>© 2022 Scissors</p>
+                    <p>Todos os direitos reservados.</p>
+                    <ul class="footer-icons">
+                        <li><a href="https://www.instagram.com/alpiste_punk/"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://twitter.com/alpiste_punk/"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="https://open.spotify.com/user/22gktbankxa4r3eaxarfxdzgi?si=a26e8e6232164a7b&nd=1"><i class="fab fa-spotify"></i></a></li>
+                    </ul>
+            </div>
+        </footer>
     </body>
 </html>
