--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
         </header>
 		<img id="banner" src="images/banner.jpg">
 		<div class="main">
-			<h2 class="center-title">Sobre</h2>
-	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<div class="about">
+				<h2 class="center-title">Sobre</h2>
+		
+				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="mission"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+				<p id="mission"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+				<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			</div>
 		</div>
 
 		<div class="benefits">
@@ -41,8 +43,18 @@
 				<li class="itens">Localização</li>
 				<li class="itens">Profissionais Qualificados</li>
 			</ul>
-
-			
 		</div>
+		<footer>
+            <div class="footer-wrapper">
+                    <h2>Scissors</h2>
+                    <p>© 2022 Scissors</p>
+                    <p>Todos os direitos reservados.</p>
+                    <ul class="footer-icons">
+                        <li><a href="https://www.instagram.com/alpiste_punk/"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://twitter.com/alpiste_punk/"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="https://open.spotify.com/user/22gktbankxa4r3eaxarfxdzgi?si=a26e8e6232164a7b&nd=1"><i class="fab fa-spotify"></i></a></li>
+                    </ul>
+            </div>
+        </footer>
 	</body>
 </html>
