--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Scissors - Home</title>
-		<link rel="stylesheet" href="styles/style.css">
+		<link rel="stylesheet" href="styles/home.css">
 	</head>
 
 	<body>
@@ -52,7 +52,7 @@
                     <ul class="footer-icons">
                         <li><a href="https://www.instagram.com/alpiste_punk/"><i class="fa-brands fa-github"></i></a></li>
                         <li><a href="https://twitter.com/alpiste_punk/"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="https://open.spotify.com/user/22gktbankxa4r3eaxarfxdzgi?si=a26e8e6232164a7b&nd=1"><i class="fab fa-spotify"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/lucas-smaniotto-a7092b1a0/"><i class="fa-brands fa-linkedin-in"></i></a></li>
                     </ul>
             </div>
         </footer>
