--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
             <div class="nav-wrapper">
-                <h1><img class="logo" src="images/logo.png"></h1>
+                <h1><img class="logo" src="images/logo.png" alt="Logo Scissors"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -50,7 +50,7 @@
                     <p>© 2022 Scissors</p>
                     <p>Todos os direitos reservados.</p>
                     <ul class="footer-icons">
-                        <li><a href="https://www.instagram.com/alpiste_punk/"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://github.com/lucassmaniotto"><i class="fa-brands fa-github"></i></a></li>
                         <li><a href="https://twitter.com/alpiste_punk/"><i class="fa-brands fa-twitter"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/lucas-smaniotto-a7092b1a0/"><i class="fa-brands fa-linkedin-in"></i></a></li>
                     </ul>
