--- a/index.html
+++ b/index.html
@@ -19,31 +19,40 @@
                 </nav>
             </div>
         </header>
-		<img id="banner" src="images/banner.jpg">
-		<div class="main">
-			<div class="about">
-				<h2 class="center-title">Sobre</h2>
+		<img class="banner" src="images/banner.jpg">
+		<main>
+			<section class="about">
+				<h2 class="title">Sobre</h2>
 		
 				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
+	
 				<p id="mission"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-
+	
 				<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-			</div>
-		</div>
-
-		<div class="benefits">
-			<h3 class="center-title">Benefícios</h3>
-
-			<img src="images/benefits.jpg" class="img-benefits">
-
-			<ul class="ul-benefits">
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
-			</ul>
-		</div>
+			</section>
+			<section class="benefits">
+				<h3 class="title">Benefícios</h3>
+				<div class="benefits-content">
+					<ul class="ul-benefits">
+						<li class="itens">Atendimento aos Clientes</li> 
+						<li class="itens">Espaço diferenciado</li>
+						<li class="itens">Localização</li>
+						<li class="itens">Profissionais Qualificados</li>
+						<li class="itens">Produtos de qualidade</li>
+						<li class="itens">Preços acessíveis</li>
+						<li class="itens">Pontualidade</li>
+						<li class="itens">Limpeza</li>
+					</ul><div class="video">
+						<iframe src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="560" height="300"></iframe>	
+					</div>
+				</div>
+			</section>
+			<section class="map">
+				<h3 class="title">Nosso Estabelecimento</h3>
+				<p>Localizado no coração da cidade!</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.330449018367!2d-122.3910949675839!3d37.78229489108098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858077fe6ae953%3A0x1cf829f1248fb8f4!2s88%20Colin%20P%20Kelly%20Jr%20St%2C%20San%20Francisco%2C%20CA%2094107%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1667319283089!5m2!1spt-BR!2sbr" width="930" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</section>
+		</main>
 		<footer>
             <div class="footer-wrapper">
                     <h2>Scissors</h2>
