Finalizando Aula 4, melhorando o CSS das páginas Desktop e adicionando responsividade mobile na página Home

--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,14 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Scissors - Contato</title>
         <link rel="stylesheet" href="styles/contact.css">
     </head>
     <body>
         <header>
             <div class="nav-wrapper">
-                <h1><img class="logo" src="images/logo.png" alt="Logo Scissors"></h1>
+                <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="Logo Scissors"></a></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
