Adicionando responsividade para a página de Contato

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <form class="form">
-                <div>
+                <div class="input-pattern">
                     <label for="name">Nome</label >
                     <input type="text" id="name" class="input-text-pattern" required>
                     <label for="email">Email</label>
@@ -38,7 +38,7 @@
                     <label for="radio-whatsapp"><input type="radio" name="contact"value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
                 </div>
                 <div class="div-hours">
-                    <div>
+                    <div class="div-wrapper">
                         <p>Selecione o horário de atendimento</p>
                         <select class="select-pattern">
                             <option>Manhã</option>
