Alterando links do footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>© 2022 Scissors</p>
                     <p>Todos os direitos reservados.</p>
                     <ul class="footer-icons">
-                        <li><a href="https://github.com/lucassmaniotto"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://github.com/lucassmaniotto/Scissors-Barber-Shop"><i class="fa-brands fa-github"></i></a></li>
                         <li><a href="https://twitter.com/alpiste_punk/"><i class="fa-brands fa-twitter"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/lucas-smaniotto-a7092b1a0/"><i class="fa-brands fa-linkedin-in"></i></a></li>
                     </ul>
